# evi-gateway

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  errors.rs  main.rs  models.rs
src/handlers/: domain.rs  gateway.rs  health.rs  mod.rs
src/models/: domain.rs
src/routes/: api.rs
